# CourierCRM

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app_accounts/: admin.py  models.py
app_accounts/migrations/: 0001_initial.py  0002_courierscore.py  0003_user_chat_id.py  0004_telegramgroup.py  0005_alter_courierscore_points.py  0006_user_city.py
app_cargo/: ScanQR.py  admin.py  apps.py  models.py
app_cargo/management/commands/: cargo_qr.py
app_cargo/migrations/: 0001_initial.py  0002_cargocostrate.py  0003_alter_cargocostrate_cost_per_mass_unit_cargo_and_more.py  0004_alter_cargo_city_to.py  0005_alter_cargocostrate_options_alter_cargocostrate_city_and_more.py  0006_alter_cargo_options_alter_cargo_city_from_and_more.py  0007_alter_workdistribution_options_and_more.py  0008_alter_city_options_alter_city_name.py
app_orders/: FiltersAdmin.py  admin.py  models.py  serializers.py  urls.py  views.py
app_orders/management/commands/: consume_feedback.py  (+2 more)
app_orders/migrations/: 0001_initial.py  0002_orderhistory_processed_by.py  0003_orderentry_entry_id_orderentry_images_and_more.py  0004_consumersentiment.py  0005_alter_consumersentiment_rating.py  0006_deliveryproof.py  0007_alter_deliveryproof_video.py  0008_alter_consumersentiment_rating.py  0009_consumersentiment_sentiment.py  0010_alter_consumersentiment_rating.py  0011_orderpreparation.py  0012_orderpreparation_uniq_prep_event.py
bot/: bot_telegram6.py  bot_telegram7.py  bot_telegram8.py
core/: settings.py  urls.py
worker/: worker.py  worker1.py
(+1 files in other folders)
